force-app/main/default/objects/AtlasSettings__c/AtlasSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the Atlas Assistance Dogs app</description>
    <label>Atlas Settings</label>
</CustomObject>