force-app/main/default/objects/AtlasSettings__c/fields/BackgroundCheckRenewalYears__c.field-meta.xml
<CustomField>
    <fullName>BackgroundCheckRenewalYears__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Years between background checks</description>
    <label>Background Check Renewal Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>