force-app/main/default/objects/AtlasSettings__c/fields/BoardTermEndMonth__c.field-meta.xml
<CustomField>
    <fullName>BoardTermEndMonth__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Month number that board member terms are valid until, where 1 is January and 12 is December.</description>
    <label>Board Term End Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>