force-app/main/default/objects/AtlasSettings__c/fields/CertRenewalYears__c.field-meta.xml
<CustomField>
    <fullName>CertRenewalYears__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Years between Certification renewals</description>
    <label>Certification Renewal Years</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>