force-app/main/default/objects/AtlasSettings__c/fields/DogExamRenewalYears__c.field-meta.xml
<CustomField>
    <fullName>DogExamRenewalYears__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Years between dog physical exams</description>
    <label>Dog Exam Renewal Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>