force-app/main/default/objects/AtlasSettings__c/fields/EarlyRenewal__c.field-meta.xml
<CustomField>
    <fullName>EarlyRenewal__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Number of days leeway before expiration dates to increment valid until</description>
    <label>Early Renewal Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>