force-app/main/default/objects/AtlasSettings__c/fields/FirstAidRenewalYears__c.field-meta.xml
<CustomField>
    <fullName>FirstAidRenewalYears__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Years between human First Aid Certificate renewals</description>
    <label>First Aid Renewal Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>