force-app/main/default/objects/AtlasSettings__c/fields/LinkFilesToTeamMembers__c.field-meta.xml
<CustomField>
    <fullName>LinkFilesToTeamMembers__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable linking files on a Team to its Team members.</description>
    <inlineHelpText>Turn off when you need to link the team member files to the team to prevent recursion.</inlineHelpText>
    <label>LinkFilesToTeamMembers</label>
    <type>Checkbox</type>
</CustomField>