force-app/main/default/objects/AtlasSettings__c/fields/OrgWideEmailName__c.field-meta.xml
<CustomField>
    <fullName>OrgWideEmailName__c</fullName>
    <description>Org wide email name to use in automated emails</description>
    <label>Org Wide Email Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>