force-app/main/default/objects/AtlasSettings__c/fields/PageSize__c.field-meta.xml
<CustomField>
    <fullName>PageSize__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Number of records in paged tables</description>
    <label>Page Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>