force-app/main/default/objects/AtlasSettings__c/fields/RabiesRenewalYears__c.field-meta.xml
<CustomField>
    <fullName>RabiesRenewalYears__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Years before a rabies vaccine needs to be renewed.</description>
    <label>Rabies Renewal Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>