force-app/main/default/objects/AtlasSettings__c/fields/RenewalLeeway__c.field-meta.xml
<CustomField>
    <fullName>RenewalLeeway__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Number of days leeway after expiration dates to extend certification by a year</description>
    <label>Renewal Leeway</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>