force-app/main/default/objects/AtlasSettings__c/fields/ShowSiUnits__c.field-meta.xml
<CustomField>
    <fullName>ShowSiUnits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show values in SI (System Internationale) units.</description>
    <inlineHelpText>Set to true to display values in SI units.  Values are shown in US units by default.</inlineHelpText>
    <label>Show SI Units</label>
    <type>Checkbox</type>
</CustomField>