force-app/main/default/objects/AtlasSettings__c/fields/VaccineRenewalYears__c.field-meta.xml
<CustomField>
    <fullName>VaccineRenewalYears__c</fullName>
    <defaultValue>1</defaultValue>
    <description
    >Years before a vaccine needs to be renewed since the last dose</description>
    <label>Vaccine Renewal Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>